--- a/frontend/i18n/de.json
+++ b/frontend/i18n/de.json
@@ -16,14 +16,14 @@
   "surround text with <pre>~~two tilde characters~~</pre>": "Text umgeben mit <pre>~~zwei Tilden~~</pre>",
   "Your Name": "Dein Name",
   " authentication": " Authentifizierung",
-  " days ago": " Tage früher",
-  " hours ago": " Stunden früher",
-  " minutes ago": " Minuten früher",
-  " months ago": " Monate früher",
-  " point": " Punkt",
-  " points": " Punkte",
-  " seconds ago": " Sekunden früher",
-  " years ago": " Jahre früher",
+  " days ago": " Tage zuvor",
+  " hours ago": " Stunden zuvor",
+  " minutes ago": " Minuten zuvor",
+  " months ago": " Monate zuvor",
+  " point": " Likes",
+  " points": " Likes",
+  " seconds ago": " Sekunden zuvor",
+  " years ago": " Jahre zuvor",
   "[deleted]": "[gelöscht]",
   "<b>M &#8595;</b> &nbsp; Markdown Help?": "<b>M &#8595;</b> &nbsp; Markdown Hilfe?",
   "Approve": "Freigeben",
@@ -34,17 +34,17 @@
   "Comment anonymously": "Anonym kommentieren",
   "Continue": "Fortfahren",
   "Create an account": "Erstelle einen Account",
-  "Don't have an account? Sign up.": "Du hast keinen Account? Registriere Dich.",
+  "Don't have an account? Sign up.": "Noch keinen Account? Jetzt registrieren.",
   "Downvote": "Abwerten",
   "Edit comment": "Kommentar bearbeiten",
   "Edit": "Bearbeiten",
-  "Email address": "Email-Adresse",
+  "Email address": "E-Mail",
   "Enter your password to log in.": "Gib dein Passwort ein um dich anzumelden",
   "Expand children": "Antworten ausklappen",
   "Finish the rest of your profile to complete.": "zum Abschließen fülle den Rest deines Profils aus.",
-  "Forgot your password?": "Du hast Dein Passwort vergessen?",
+  "Forgot your password?": "Passwort vergessen?",
   "Lock Thread": "Diskussionsfaden sperren",
-  "Login with your email address": "Mit Deiner Email-Adresse anmelden",
+  "Login with your email address": "Mit E-Mail anmelden",
   "Login": "Anmelden",
   "Newest": "Neueste",
   "Oldest": "Älteste",
