--- a/frontend/i18n/de.json
+++ b/frontend/i18n/de.json
@@ -64,7 +64,7 @@
   "Unlock Thread": "Diskussionsfaden entsperren",
   "Unsticky": "Nicht festpinnen",
   "Upvote": "Aufwerten",
-  "Upvotes": "Aufwertungen",
+  "Upvotes": "Beliebteste",
   "Website (Optional)": "Website (optional)",
   "Your comment is under moderation.": "Dein Kommentar liegt bei der Moderation.",
   "Your comment was flagged as spam and is under moderation.": "Dein Kommentar wurde als Spam identifiziert und liegt bei der Moderation."
